2005-05-28  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py, gaphor/ui/diagramactions.py:
	capitalize menu labels, tooltips first word capitalized

2005-05-25  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py, gaphor/diagram/operation.py,
	gaphor/ui/namespace.py: allow to set class operation to be abstract
		
2005-05-25  wrobell <wrobell@pld-linux.org>
	* gaphor/ui/namespace.py: change font of diagram names to bold and
	abstract classifiers to italic in tree view

2005-05-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py: check if item and item.subject exist
	when executing AbstractClassAction

2005-05-24  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram.association.py: Make association redraw when setting
	navigability.

2005-05-23  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py gaphor/diagram/association.py: UML 2.0
	navigability support is back with fixed bug which caused problems when
	loading large UML model

2005-05-23  wrobell <wrobell@pld-linux.org>
	* gaphor/UML/uml2.override: while loading model, the association can be
	not loaded when accessing opposite property

2005-04-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/mainactions.py, po/es.po, po/nl.po:
	Updated. More translations.

2005-04-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* po/es.po: Espanish translation, thanks to David Roguin.

2005-04-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/itemactions.py: reverted to version 1.41.

2005-03-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/association.py: reverted to version 1.60.

2005-01-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/association.py: use one rotation function (update_dir
	method and xs rotation refactorized), show direction arrow on proper
	side of association name

2005-01-24  wrobell <wrobell@pld-linux.org>
	* gaphor/diagram/itemactions.py gaphor/diagram/association.py: UML 2.0